<resources>
    <string name="app_name">Buy A Skill</string>
    <string name="registro">Registro</string>
    <string name="acceder">Acceder</string>
    <string name="registrar">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_n">Fecha de Nacimiento</string>
    <string name="tlf">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="cod_postal">Código Postal</string>
    <string name="ciudad">Ciudad</string>
    <string name="title_activity_registro2">Registro2</string>
    <string name="toast_rellenar_campos">Rellena todos los campos para continuar</string>
    <string name="toast_nombreInvalido">Introduzca un nombre válido </string>
    <string name="toast_apellidoInvalido">Introduzca unos apellidos válido</string>
    <string name="toast_fechaInvalida">Introduzca una fecha válido</string>
    <string name="toast_calleInvalida">Introduzca una calle válida</string>
    <string name="toast_ciudad">Introduzca una ciudad válida</string>
    <string name="toast_tamano_tlf">Introduzca un número de teléfono válido(9 números)</string>
    <string name="toast_tamano_postal">Introduzca un código postal  válido(5 números)</string>
    <string name="toast_formato_correo">Introduzca un formato de correo válido(@dominio.extension)</string>
    <string name="toast_formato_pass">Introduzca una contraseña valida</string>
    <string name="info_usuario">Información del Usuario</string>
    <string name="volver_a_Tienda">Volver a Tienda</string>
    <string name="cambiar_Datos">Cambiar Datos</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="sobreNosotros">Sobre Nosotros</string>
    <string name="modificaDatosAntes">Error, no has modificado nigun dato, persiona el boton Cambiar Datos y modifica los datos que quieras</string>
    <string name="cuerpoSobreNosotros">Buy A Skill nació como una forma de facilitar a las personas el comienzo en una nueva disciplina o habilidad.
        <br/><br/>
    Para ello ponemos a disposición de nuestros clientes paquete con las herramientas y guías de la habilidad que desea de manera que él comienza sea mucho más sencillo.
        <br/><br/>
        La idea de Buy A Skill es hacer que cualquier persona puede obtener la habilidad que quiera sin la idea de tener que romperse la cabeza, sino que lo pueda hacer con tranquilidad
        y seguridad en su hogar con la confianza de que el producto adquirido cumplirá sus expectativas
    </string>
    <string name="editarguardar">Editar/Guardar Datos</string>
    <string name="exitoCambios">Cambios realizados con exito</string>
    <string name="perfilUsuario">Perfil</string>
    <string name="addCesta">Añadir a la cesta</string>






    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>