<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SobreNosotros">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="204dp"
        android:layout_height="26dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="108dp"
        android:text="@string/sobreNosotros"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="264dp"
        android:layout_height="452dp"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="115dp"
        android:textSize="15sp"
        android:text="@string/cuerpoSobreNosotros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="44dp"
        android:text="@string/volver_a_Tienda"
        android:onClick="volverTienda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>