<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".homefragments.perfil.PerfilFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        android:padding="12dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/nombre"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                app:layout_constraintTop_toTopOf="@+id/guiastart" />

            <EditText
                android:id="@+id/nombre_perfilusu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:enabled="false"
                android:maxLines="1"
                android:text=""
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="33dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/apellidos"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="52dp" />

            <EditText
                android:id="@+id/apellido_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:enabled="false"
                android:maxLines="1"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtDir"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="left"
                android:text="@string/direccion"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="106dp" />

            <EditText
                android:id="@+id/direccion_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:enabled="false"
                android:maxLines="1"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/ciudad"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="165dp" />

            <EditText
                android:id="@+id/ciudad_perfilUsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:enabled="false"
                android:maxLines="1"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:text="@string/fecha_n"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="262dp" />

            <EditText
                android:id="@+id/fechanaci_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:enabled="false"
                android:maxLines="1"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtTLF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tlf"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="346dp" />

            <EditText
                android:id="@+id/numtlf_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtMail"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:gravity="left"
                android:text="@string/correo"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guiacol1" />

            <EditText
                android:id="@+id/correo_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:maxLines="1"
                android:text=""
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="383dp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card_background_color"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtPostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cod_postal"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guiacol1"
                tools:layout_editor_absoluteY="199dp" />

            <EditText
                android:id="@+id/cod_postal_perfilusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:text="" />
        </TableRow>

        <Button
            android:id="@+id/habilitar_des_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/guardarCambios"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="483dp" />

    </TableLayout>

</ScrollView>