<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro"
    android:gravity="center">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/nombre"
        android:textColor="@color/azul_letra"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nombre_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_letra"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:maxLines="1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/apellido"
        android:textColor="@color/azul_letra"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/apellidos_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_letra"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:maxLines="1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/fecha_n"
        android:textColor="@color/azul_letra"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/fecha_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_letra"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:onClick="calendario"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_arrow_forward_ios" />

    </LinearLayout>

</LinearLayout>